# hummingbird

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/: stub.css  ua.css
assets/fonts/: Roboto-LICENSE.txt
doc/: TODOs.md  coding_constitution.md  refactoring_stories.md
doc/milestones/: milestone0.md  milestone1.md  milestone2.md  milestone3.md  roadmap.md
src/app/: BrowserApp.cpp  BrowserApp.h  main.cpp
src/core/: ArenaAllocator.cpp  ArenaAllocator.h  AssetPath.cpp  AssetPath.h  IGraphicsContext.h  INetwork.h  IWindow.h  InputEvent.h  Log.h  WindowFactory.h
src/core/dom/: DomFactory.cpp  DomFactory.h  Element.h  HtmlTagNames.h  Node.h  Text.h
src/core/platform_api/: INetwork.h  IResourceProvider.h  IWindow.h  NetworkFactory.h  ResourceProviderFactory.h
src/core/utils/: Assert.h  AssetPath.cpp  Log.h  Timing.h
src/html/: HtmlAttributeNames.h  HtmlParser.cpp  HtmlParser.h  HtmlTagNames.h  HtmlToken.h  HtmlTokenizer.cpp  HtmlTokenizer.h
src/layout/: BlockBox.cpp  BlockBox.h  Geometry.h  InlineBox.cpp  InlineBox.h  InlineLineBuilder.cpp  InlineLineBuilder.h  RenderBreak.cpp  RenderBreak.h  RenderFactory.cpp  RenderFactory.h  RenderImage.cpp  RenderImage.h  RenderListItem.cpp  RenderListItem.h  RenderObject.cpp  RenderObject.h  RenderRule.cpp  RenderRule.h  RenderTable.cpp  RenderTable.h  TextBox.cpp  TextBox.h  TreeBuilder.cpp  TreeBuilder.h
src/layout/inline/: IInlineParticipant.h  InlineRef.h  InlineTypes.h
src/parser/: Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h
src/platform/: CurlNetwork.cpp  CurlNetwork.h  FileResourceProvider.cpp  FileResourceProvider.h  NetworkFactory.cpp  ResourceProviderFactory.cpp  SDLGraphicsContext.cpp  SDLGraphicsContext.h  SDLWindow.cpp  SDLWindow.h  SDLWindowFactory.cpp  StubNetwork.cpp  StubNetwork.h
src/renderer/: Painter.cpp  Painter.h
src/style/: ComputedStyle.h  CssParser.cpp  CssParser.h  CssPropertyNames.h  CssTokenizer.cpp  CssTokenizer.h  CssValueNames.h  Parser.cpp  Parser.h  SelectorMatcher.cpp  SelectorMatcher.h  StyleEngine.cpp  StyleEngine.h  Stylesheet.h  StylesheetSource.cpp  StylesheetSource.h  Tokenizer.cpp  Tokenizer.h
tests/: CMakeLists.txt
tests/app/: SmokeMain.test.cpp
tests/core/: ArenaAllocator.test.cpp  AssetPath.test.cpp  Log.test.cpp  Timing.test.cpp
tests/html/: HtmlParser.test.cpp  HtmlTokenizer.test.cpp
tests/layout/: BlockBox.test.cpp  InlineLayout.test.cpp  InlineLineBuilder.test.cpp  LayoutStyleIntegration.test.cpp  ListItemLayout.test.cpp  RenderControl.test.cpp  RenderObject.test.cpp  TableLayout.test.cpp  TestGraphicsContext.h  TextBox.test.cpp  TreeBuilder.test.cpp
tests/network/: CurlNetwork.test.cpp  NetworkFactory.test.cpp  StubNetwork.test.cpp
tests/parser/: Parser.test.cpp  Tokenizer.test.cpp
tests/platform/: ResourceProvider.test.cpp
tests/renderer/: Painter.test.cpp
tests/style/: CSSParser.test.cpp  SelectorMatcher.test.cpp  StyleEngine.test.cpp  StylesheetSource.test.cpp
